<resources>
    <string name="app_name">BitirmeProjesi</string>
    <string name="title_activity_login">Giriş Yap</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_email">Email</string>
    <string name="login_password">Şifre</string>
    <string name="login_button">Giriş Yap</string>
    <string name="login_checkbox">Beni Hatırla</string>
    <string name="signup_button">Kayıt Ol</string>
    <string name="signup_ad">Ad</string>
    <string name="signup_soyad">Soyad</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Şifre</string>
    <string name="title_activity_chat">chat</string>
    <string name="cikis_yap">Çıkış Yap</string>
    <string name="signup_sifre">Sifre</string>
    <string name="ilac_adi">İlaç Adı</string>
    <string name="ilac_dozu">İlacın Dozu</string>
    <string name="ilac_aciklama">Açıklama</string>
    <string name="medicine_submit_button">Gönder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
